--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "tailwind-scrollbar": "^2.1.0-preview.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
